<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/viewRegistration"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/dimMarginPadding"
        android:contentDescription="@string/ph_imageviewdescription"
        android:id="@+id/box"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_champ_0"
        app:layout_constraintLeft_toLeftOf="@id/box"
        app:layout_constraintTop_toTopOf="@id/box"
        app:layout_constraintRight_toRightOf="@id/box"
        app:layout_constraintBottom_toTopOf="@id/txtName"
        android:layout_margin="@dimen/dimMarginPadding"
        android:contentDescription="@string/ph_imageviewdescription"
        android:id="@+id/imgCamp"
        />
    <!--android:visibility="invisible"-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/box"
        app:layout_constraintTop_toBottomOf="@id/imgCamp"
        app:layout_constraintRight_toRightOf="@id/box"
        android:gravity="center"
        android:textSize="@dimen/dimText"
        android:layout_margin="@dimen/dimMarginPadding"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/ph_campionato"
        android:id="@+id/txtName"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/box"
        app:layout_constraintBottom_toBottomOf="@id/box"
        app:layout_constraintRight_toLeftOf="@id/txtRacers"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        android:text="@string/ph_subscription"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/dimMarginPadding"
        android:background="@drawable/little_box"
        android:id="@+id/viewRegistration"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/box"
        app:layout_constraintRight_toRightOf="@id/box"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        app:layout_constraintBottom_toBottomOf="@id/box"
        android:text="4 ISCRITTI"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="@dimen/dimMarginPadding"
        android:padding="@dimen/dimMarginPadding"
        android:background="@drawable/little_box"
        android:id="@+id/txtRacers"
        />
    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        app:layout_constraintBottom_toBottomOf="@id/box"
        app:layout_constraintLeft_toRightOf="@id/txtRacers"
        app:layout_constraintRight_toRightOf="@id/box"
        android:layout_margin="@dimen/dimMarginPadding"
        android:text="2/3 CORSE"
        android:padding="@dimen/dimMarginPadding"
        android:background="@drawable/little_box"
        android:id="@+id/txtRaces"
        />




</androidx.constraintlayout.widget.ConstraintLayout>