<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firststart.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="@dimen/dimText"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/banner"
        android:id="@+id/imgBanner"
        />

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimText"
        android:layout_marginTop="156dp"
        android:background="@drawable/little_box"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimMarginPadding"
        android:textSize="@dimen/dimSubSubTitle"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtLoginPsw" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="password"
        android:layout_margin="@dimen/dimText"
        android:background="@drawable/little_box"
        android:textSize="@dimen/dimSubSubTitle"
        android:inputType="textPassword"
        android:padding="@dimen/dimMarginPadding"
        android:id="@+id/txtLoginPsw"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtLoginPsw"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        android:layout_margin="@dimen/dimText"
        android:textSize="@dimen/dimText"
        android:text="@string/forgotPsw"
        android:textColor="@color/colorPrimary"
        android:id="@+id/txtForgotPsw"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPsw"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/dimText"
        android:text="ACCEDI"
        android:background="@drawable/subscribed_box"
        android:textSize="@dimen/dimSubSubTitle"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:padding="@dimen/dimMarginPadding"
        android:id="@+id/btnLogin"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/newAccount2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/newAccount1"
        android:gravity="right"
        android:textSize="@dimen/dimText"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/newAccount1"
        />
    <TextView
        android:textSize="@dimen/dimText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/newAccount1"
        android:gravity="left"
        android:id="@+id/newAccount2"
        android:layout_marginBottom="32dp"
        android:text="@string/newAccount2"
        android:textColor="@color/colorPrimary"
        />

</androidx.constraintlayout.widget.ConstraintLayout>